Details
-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.6.1
-
None
-
-
04b4549e9 (dev), c8e3a5aa7 (6.7), 1b71cae40 (6.6)
Description
Description:
Clicking on 'start' while no serial port is selected will cause the example to crash.
Steps to reproduce:
- Open the Blocking receiver example
- Make sure that no serial port is selected
- Click on 'start' (The example should now crash)
Expected behavior:
Clicking on 'start' should not be crashing the example, even if no example is selected.
Observed behavior:
Clicking on 'start' while no serial port is selected will crash the example.
Special notes:
Attachments
For Gerrit Dashboard: QTBUG-120412 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
543788,5 | Prevent a crash if port has not been opened | dev | qt/qtserialport | Status: MERGED | +2 | 0 |
543925,2 | Prevent a crash if port has not been opened | 6.7 | qt/qtserialport | Status: MERGED | +2 | 0 |
544079,2 | Prevent a crash if port has not been opened | 6.6 | qt/qtserialport | Status: MERGED | +2 | 0 |