Prevent a crash if port has not been opened

Also fix incorrect usage in the blocking receiver
example.

Fixes: QTBUG-120412
Pick-to: 6.6
Change-Id: I4c35cfc2a6f341fffae4a0db92a9a12de313bbc8
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
Reviewed-by: Ivan Solovev <ivan.solovev@qt.io>
(cherry picked from commit 04b4549e982dcbc80146ed76035d416bcf434f3b)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>